# ace

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  shell.nix
.github/workflows/: ci.yml
ace_args/: Cargo.toml
ace_args/src/: cli.rs  config.rs  lib.rs
ace_backend/: Cargo.toml
ace_backend/src/: main.rs
ace_components/: Cargo.toml
ace_components/src/: actionable.rs  dynamic.rs  lib.rs
ace_components/src/js/: test_timer.js
ace_game_client/: Cargo.toml
ace_game_client/assets/: mousemark2.glb
ace_game_client/assets/models/: bounce_block.glb  directional_test_object.glb  magnet.glb  mousemark3.glb  mousemark3.gltf  pendulum_hammer.glb  portal.glb  walnut.glb
ace_game_client/src/: app.rs  lib.rs  main.rs  on_click.rs  resources.rs
ace_game_client/src/systems/: events.rs  init.rs  input.rs  sync.rs  tick.rs
ace_game_server/: Cargo.toml
ace_game_server/src/: main.rs  resources.rs
ace_game_server/src/systems/: events.rs  init.rs  tick.rs
ace_game_shared/: Cargo.toml
ace_game_shared/src/: lib.rs
ace_game_shared/src/protocol/: auth.rs  color.rs  entity_assignment.rs  key_command.rs  position.rs
ace_rpc/: Cargo.toml
ace_rpc/src/: client.rs  lib.rs  messages.rs  rpc.rs  server.rs  topics.rs
ace_runtime/: Cargo.toml
ace_runtime/src/: lib.rs  rt.rs
ace_runtime/src/js/: execute.js  wrapper.js
ace_runtime/src/ts/: .gitignore  Makefile  ace.ts
ace_runtime/tests/: rt_test.rs
ace_runtime/tests/fixtures/: .gitignore  Makefile
ace_runtime/tests/fixtures/js_add/: add.js
config/: development.yaml  staging.yaml
(+1 files in other folders)
