[package]
name = "ace_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
# naia-bevy-server = "0.10.1"
ace_game_shared = { path = "../ace_game_shared" }
ace_runtime = { path = "../ace_runtime"}
bevy_app = { version = "0.9", default-features=false }
bevy_core = { version = "0.7", default-features=false }
bevy_ecs = { version = "0.7", default-features=false }
bevy_log = { version = "0.7", default-features=false }
ace_args = {path = "../ace_args"}

[features]
use-udp = [ "naia-bevy-server/use-udp" ]
use-webrtc = [ "naia-bevy-server/use-webrtc" ]

[dependencies.naia-bevy-server]
version = "0.10.1"
features = ["use-webrtc"]